--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@ body {
 
  <div class="center">
 
-<a href="file:///C:/Users/mad/Documents/entrar.html" style="font-size: 30px">Enter</a>
-<a href="file:///C:/Users/mad/Desktop/text.html" style="font-size: 30px">❤</a>
-<a href="C:\Users\mad\Desktop\code\info.html" style="font-size: 30px" >Info</a>
+<a href="entrar.html" style="font-size: 30px">Enter</a>
+<a href="text.html" style="font-size: 30px">❤</a>
+<a href="star.html" style="font-size: 30px" >Info</a>
 
 
 
