--- a/signup.html
+++ b/signup.html
@@ -45,12 +45,12 @@
 
     </style>
 </head>
-<body background="C:\Users\mad\Desktop\fotos\borb.jpg">
+<body background="fotos\borb.jpg">
  <div class="box">
      <p>Me ama?</p>
      <div class="buttons-container">
          <button>
-             <a href="C:\Users\mad\Desktop\a\ama.html">muito</a>
+             <a href="ama.html">muito</a>
          </button>
          <button id="no">muitão</button>
      </div>
