--- a/ama.html
+++ b/ama.html
@@ -11,7 +11,7 @@
 <body>
 
 <div id="container">
-	<img src="C:\Users\mad\Desktop\fotos\coracaos.jpg" class="coracao">
+	<img src="fotos\coracaos.jpg" class="coracao">
 	<div class="caixa">
 		<h1>CALCULADORA DO AMOR</h1>
 		<h3>Coloque um número de 0 a 50</h3>
