--- a/star.html
+++ b/star.html
@@ -5,7 +5,7 @@
 
 </head>
 <body>
-<script src="C:\Users\mad\Desktop\a\teste.js">
+<script src="teste.js">
 </script>
 
 <h1 style="font-size: 40px; text-align: center; color: #89bef0;">We have been together for:</h1> 
