--- a/entrar.html
+++ b/entrar.html
@@ -50,7 +50,7 @@ body
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
-	background: #23242a;
+	background: ##edeef0;
 }
 .box
 {
