--- a/entrar.html
+++ b/entrar.html
@@ -50,7 +50,7 @@ body
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
-	background: ##edeef0;
+	background: #23242a;
 }
 .box
 {
@@ -140,7 +140,7 @@ h2
 	background: transparent;
 	border: none;
 	outline: none;
-	color: #23242a;
+	color: #edeef0;
 	font-size: 1em;
 	letter-spacing: 0.05em;
 	z-index: 10;
