--- a/star.html
+++ b/star.html
@@ -22,6 +22,28 @@
 </div>
 
 
+<div class="container">
+	<p class="text">/**
+*THE CODE OF LOVE</p>
+<p class="text">*/
+Hey mo !</p>
+<p class="text"> Do you remember the day we first met?</p>
+<p class="text"> // 15/04/2022.</p>
+<p class="text"> Since that day a spark begun;</p>
+<p class="text">// Your face Your Voice Your Words.</p>
+<p class="text"> Your everything got imprinted in my heart;</p>
+<p class="text"> As the time went on;
+The Bond grew stronger and stronger;</p>
+<p class="text"> We have traveled a long way together;</p>
+<p class="text"> There have been fights ;</p>
+<p class="text">// And I'm sure there will be more.</p>
+<p class="text"> But our Bond will always grow back Stronger;</p>
+
+
+<p class="text"> All I want to say is:
+I will love you forever;</p>
+
+	
 
 <style>
 
@@ -49,6 +71,32 @@
   background:#ce52e8 ;
   color: black;
 }
+
+.container{ display: inline-block; }
+
+.text{
+	font-size: 1.2em;
+	letter-spacing: 2px;
+	font-family: monospace;
+	border-right: 5px solid;
+	width: 100%;
+	white-space: nowrap;
+	overflow: hidden;
+	animation: 
+	       typing 2s ,
+	       cursor .4s step-end infinite alternate;
+}
+
+
+@keyframes cursor{
+	50%{ border-color: transparent; }
+}
+
+@keyframes typing{
+	from{ width: 0 }
+}
+
+
 </style>
 </body>
 </html>
