--- a/star.html
+++ b/star.html
@@ -23,8 +23,6 @@
 
 
 <div class="container">
-	<p class="text">/**
-*THE CODE OF LOVE</p>
 <p class="text">*/
 Hey mo !</p>
 <p class="text"> Do you remember the day we first met?</p>
@@ -82,6 +80,7 @@ I will love you forever;</p>
 	width: 100%;
 	white-space: nowrap;
 	overflow: hidden;
+	color: beige;
 	animation: 
 	       typing 2s ,
 	       cursor .4s step-end infinite alternate;
