--- a/star.html
+++ b/star.html
@@ -80,7 +80,7 @@ I will love you forever;</p>
 	width: 100%;
 	white-space: nowrap;
 	overflow: hidden;
-	color: beige;
+	color: purple;
 	animation: 
 	       typing 2s ,
 	       cursor .4s step-end infinite alternate;
